updating button styles and replacing files

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
       <div class="one-half column" style="margin-top: 25%">
         <div class="resources">
           <h4>Thumbnail Resources</h4>
-          <a href="path_to_file" download="proposed_file_name" class="download">Blanks</a>
-          <a href="path_to_file" download="proposed_file_name" class="download">Layouts</a>
+          <a href="/templates/Thumbnail_Blank_Template.psdt" download="Thumbnail Setup" class="download">Blanks</a>
+          <a href="/templates/thumbnail-ideas.zip" download=" Thumbnail Image Ideas" class="download">Ideas</a>
         </div>
         <div class="resources">
           <h4>Preview Resources</h4>
-          <a href="path_to_file" download="proposed_file_name" class="download">Blanks</a>
-          <a href="path_to_file" download="proposed_file_name" class="download">Layouts</a>
+          <a href="templates/Preview_Blank_Template.psdt" download="Preview Image Setup" class="download">Blanks</a>
+          <a href="preview-ideas.zip" download="Preview Image Ideas" class="download">Ideas</a>
         </div>
         <div class="resources">
           <h4>Metadata Resources</h4>
-          <a href="path_to_file" download="proposed_file_name" class="download">Form</a>
+          <a href="templates/AdobeStock_Templates_MetadataForm.xlsx" download="Metadata Form" class="download">Form</a>
         </div>
       </div>
     </div>
