--- a/index.html
+++ b/index.html
@@ -35,19 +35,20 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
+        <h2>Adobe Stock Template Resources</h2>
         <div class="resources">
-          <h4>Thumbnail Resources</h4>
-          <a href="/templates/Thumbnail_Blank_Template.psdt" download="Thumbnail Setup" class="download">Blanks</a>
-          <a href="/templates/thumbnail-ideas.zip" download=" Thumbnail Image Ideas" class="download">Ideas</a>
+          <h4>For Thumbnail Images</h4>
+          <a href="templates/Thumbnail_Blank_Template.psdt" download="Thumbnail Setup" class="download">Download Blank File</a><br><br>
+          <a href="templates/thumbnail-ideas.zip" download=" Thumbnail Image Ideas" class="download">Inspiration Files</a>
         </div>
         <div class="resources">
-          <h4>Preview Resources</h4>
-          <a href="templates/Preview_Blank_Template.psdt" download="Preview Image Setup" class="download">Blanks</a>
-          <a href="preview-ideas.zip" download="Preview Image Ideas" class="download">Ideas</a>
+          <h4>For Preview Images</h4>
+          <a href="templates/Preview_Blank_Template.psdt" download="Preview Image Setup" class="download">Download Blank File</a><br><br>
+          <a href="preview-ideas.zip" download="Preview Image Ideas" class="download">Inspiration File</a>
         </div>
         <div class="resources">
-          <h4>Metadata Resources</h4>
-          <a href="templates/AdobeStock_Templates_MetadataForm.xlsx" download="Metadata Form" class="download">Form</a>
+          <h4>Metadata</h4>
+          <a href="templates/AdobeStock_Templates_MetadataForm.xlsx" download="Metadata Form" class="download">Download Metadata Form</a>
         </div>
       </div>
     </div>
