updating file paths for zip downloads

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Adobe Stock Templates Kits</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="Adobe Stock Templates resources" content="">
+  <meta name="Adobe Stock Templates" content="">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
