updating file paths for zip downloads

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="resources">
           <h4>For Preview Images</h4>
           <a href="templates/Preview_Blank_Template.psdt" download="Preview Image Setup" class="download">Download Blank File</a><br><br>
-          <a href="preview-ideas.zip" download="Preview Image Ideas" class="download">Inspiration File</a>
+          <a href="thumbnails/preview-ideas.zip" download="Preview Image Ideas" class="download">Inspiration File</a>
         </div>
         <div class="resources">
           <h4>Metadata</h4>
