--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
+
+<! -- Analytics
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119010566-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-119010566-1');
+</script>
+
+
 </head>
 <body>
 
