tweking download elements

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         <h2>Adobe Stock Template Resources</h2>
         <div class="resources">
           <h4>For Thumbnail Images</h4>
-          <a href="templates/Thumbnail_Blank_Template.psdt" download="Thumbnail Setup" class="download">Download Blank File</a><br><br>
+          <a href="templates/Thumbnail.psd" download="Thumbnail" class="download">Download Blank File</a><br><br>
           <a href="templates/thumbnail-ideas.zip" download="Thumbnail Image Ideas" class="download">Download Inspiration Files</a>
         </div>
         <div class="resources">
           <h4>For Preview Images</h4>
-          <a href="templates/Preview_Blank_Template.psdt" download="Preview Image Setup" class="download">Download Blank File</a><br><br>
+          <a href="templates/Preview1.psd" download="Preview1" class="download">Download Blank File</a><br><br>
           <a href="templates/preview-ideas.zip" download="Preview Image Ideas" class="download">Download Inspiration Files</a>
         </div>
         <div class="resources">
