making titles consistent

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Adobe Stock Templates Kits</title>
-  <meta name="Adobe Stock Templates resources" content="">
+  <title>Adobe Stock Templates | Packages</title>
+  <meta name="Adobe Stock Templates Packages" content="">
   <meta name="Adobe Stock Templates" content="">
 
   <!-- Mobile Specific Metas
@@ -49,7 +49,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h2>Adobe Stock Template Resources</h2>
+        <h2>Adobe Stock Templates: Package Submission Sets</h2>
         <div class="resources">
           <h4>For Thumbnail Images</h4>
           <a href="templates/Thumbnail.psd" download="Thumbnail" class="download">Download Blank File</a><br><br>
